просто помогите мне умереть, пофиксил регистрацию и логин

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         <activity android:name=".Signup">
 
         </activity>
+        <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".Welcome">
+
+        </activity>
 
     </application>
 
