--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Signup">
-
-        </activity>
-        <activity android:name=".LoginActivity">
-
-        </activity>
-        <activity android:name=".Welcome">
-
-        </activity>
-
+        <activity android:name=".Signup" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name="com.example.waldes.ksuonlinenew.Welcome" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".Chat.ChatActivity" />
     </application>
 
 </manifest>
